HUE-3674 [core] Prevent idle of idle session timeout blurring

--- a/desktop/core/src/desktop/static/desktop/css/login.css
+++ b/desktop/core/src/desktop/static/desktop/css/login.css
@@ -76,6 +76,7 @@
   min-height: 44px;
   font-weight: normal;
   text-shadow: none;
+  margin-left: 0;
 }
 
 .login-header {
